phase-2/week-3/kubernetes-deep-dive/k8s-progress-2/day-5-rbac-networkpolicy/manifests/app-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: access-lab
  labels:
    role: app
spec:
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "while true; do sleep 3600; done"]
---
apiVersion: v1
kind: Pod
metadata:
  name: db
  namespace: access-lab
  labels:
    role: db
spec:
  containers:
    - name: db
      image: nginx:1.25
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: random-client
  namespace: access-lab
  labels:
    role: random
spec:
  containers:
    - name: random-client
      image: busybox:1.36
      command: ["sh", "-c", "while true; do sleep 3600; done"]
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: access-lab
spec:
  selector:
    role: db
  ports:
    - port: 80
      targetPort: 80
