phase-2/week-3/kubernetes-deep-dive/k8s-progress-2/day-5-rbac-networkpolicy/manifests/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: access-lab
spec:
  podSelector: {}
  policyTypes:
    - Ingress
